<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sequenceID"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt_sequenceID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromval"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toval"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/StorageLocation"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:hint="@string/sequenceID_hint"
                android:imeOptions="actionNext"
                android:numeric="integer"
                android:singleLine="true"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/StorageValue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/sequenceIDValue_hint"
                android:imeOptions="actionDone"
                android:numeric="integer"
                android:singleLine="true"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_scanlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scanlocation"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btn_scanlocationvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scanlocationvalue"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btn_scanlocationwrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scanlocationwrong"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btn_scanlocationvaluewrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scanlocationvaluewrong"
                android:textSize="12dp" />
        </LinearLayout>

        <GridView
            android:id="@+id/GV_Show"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:horizontalSpacing="-4dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="-4dp">

        </GridView>
    </LinearLayout>
</ScrollView>