<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_sortnr"
        android:layout_centerHorizontal="true"
        android:text="@string/SortNr"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/edit_sortnr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:imeOptions="actionSend"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_sortnr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/Enter" />


    <Button
        android:id="@+id/btn_scannr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_ScanNr"
        android:textSize="20dp" />
</RelativeLayout>
